--- a/www/assets/styles/layout/_header.scss
+++ b/www/assets/styles/layout/_header.scss
@@ -7,7 +7,7 @@
                 align-items: center;
                 padding: 7.5px 0;
                 border-bottom: 1px solid #E7E7E7;
-                .left-item {
+                .nav-item {
                     ul {
                         display: flex;
                         li {
