--- a/www/assets/styles/layout/_header.scss
+++ b/www/assets/styles/layout/_header.scss
@@ -14,7 +14,7 @@
                             padding: 0 16px;
                             border-left: 1px solid #E7E7E7;
                             font-size: 12px;
-                            font-weight: normal;
+                            @include font-regular;
                             &:first-child {
                                 padding: 0 16px 0 0;
                                 border-left: none;
@@ -29,7 +29,7 @@
                     }
                     .lang-text {
                         font-size: 12px;
-                        font-weight: normal;
+                        @include font-regular;
                     }
                 }
             }
@@ -59,31 +59,74 @@
                             padding: 0 0 0 5px;
                             span {
                                 font-size: 13px;
-                                font-weight: 600;
+                                @include font-semibold;
                             }
                         }
                     }
                 }
             }
+        }
+        .low-container {
             .low-block {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
                 padding: 13.5px 0;
-                border-top: 1px solid #D3D3D3;
-                border-bottom: 1px solid #D3D3D3;
+                position: relative;
                 .category-item {
-                    padding: 0 48px 0 0;
+                    padding: 0 38px 0 0;
                     border-right: 1px solid #D3D3D3;
                     ul {
                         display: flex;
                         li {
-                            margin: 0 0 0 48.11px;
-                            font-size: 15px;
-                            font-weight: 600;
-                            cursor: pointer;
-                            &:first-child {
-                                margin: 0;
+                            .category-link {
+                                margin: 0 0 0 48.11px;
+                                font-size: 15px;
+                                @include font-semibold;
+                                color: $black;
+                                &.zero {
+                                    margin: 0;
+                                }
+                            }
+                            .open-menu {
+                                display: flex;
+                                position: absolute;
+                                width: 1264px;
+                                height: 377px;
+                                top: 65px;
+                                .menu-right {
+                                    padding: 25px 32px 32px;
+                                    .right-title {
+                                        font-size: 24px;
+                                        @include font-bold
+                                    }
+                                    .right-block {
+                                        flex-direction: column;
+                                        .right-item {
+                                            font-size: 16px;
+                                            @include font-semibold;
+                                            color: $black;
+                                            margin: 28px 0 0;
+                                        }
+                                    }
+                                }
+                                .menu-left {
+                                    padding: 24px;
+                                    .left-block {
+                                        flex-direction: column;
+                                        flex-wrap: wrap;
+                                        .left-item {
+                                            font-size: 16px;
+                                            @include font-semibold;
+                                            color: $black;
+                                        }
+                                    }
+                                }
+                            }
+                            &:hover {
+                                .open-menu {
+                                    display: flex;
+                                }
                             }
                         }
                     }
@@ -100,6 +143,8 @@
                     }
                 }
             }
+            border-top: 1px solid #D3D3D3;
+            border-bottom: 1px solid #D3D3D3;
         }
     }
 }
