--- a/www/assets/styles/main.scss
+++ b/www/assets/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'vendors/normalize';
+@import 'base/fonts';
 @import 'abstracts/mixins';
 @import 'abstracts/variables';
 @import "components/button";
