--- a/www/assets/styles/layout/_header.scss
+++ b/www/assets/styles/layout/_header.scss
@@ -91,34 +91,86 @@
                             .open-menu {
                                 display: flex;
                                 position: absolute;
-                                width: 1264px;
-                                height: 377px;
-                                top: 65px;
+                                justify-content: space-between;
+                                top: 45px;
+                                left: -35px;
+                                border-radius: 0px 0px 8px 8px;
+                                border: 1px solid #D3D3D3;
                                 .menu-right {
                                     padding: 25px 32px 32px;
-                                    .right-title {
-                                        font-size: 24px;
-                                        @include font-bold
-                                    }
-                                    .right-block {
-                                        flex-direction: column;
-                                        .right-item {
-                                            font-size: 16px;
-                                            @include font-semibold;
-                                            color: $black;
-                                            margin: 28px 0 0;
+                                    min-width: 322px;
+                                    display: flex;
+                                    flex-direction: column;
+                                    justify-content: space-between;
+                                    .right-list {
+                                        .right-title {
+                                            font-size: 24px;
+                                            @include font-bold
                                         }
+                                        .right-block {
+                                            flex-direction: column;
+                                            .right-item {
+                                                font-size: 16px;
+                                                margin: 28px 0 0;
+                                                &.active {
+                                                    background: #F1F1F1;
+                                                    border-radius: 24px;
+                                                    padding: 10px 18px;
+                                                    margin: 16px 0 0;
+                                                    text-align: center;
+                                                    &::before {
+                                                        content: '';
+                                                    }
+                                                }
+                                                a {
+                                                    color: $black;
+                                                    @include font-semibold;
+                                                }
+                                            }
+                                        }
+                                    }
+                                    .btn-item {
+                                        background: #EEEEEE;
+                                        border-radius: 23px;
+                                        padding: 8px 16px;
+                                        font-size: 14px;
+                                        @include font-semibold;
+                                        color: $black;
+                                        max-width: 127px;
+                                        text-align: center;
                                     }
                                 }
                                 .menu-left {
                                     padding: 24px;
-                                    .left-block {
-                                        flex-direction: column;
-                                        flex-wrap: wrap;
-                                        .left-item {
-                                            font-size: 16px;
-                                            @include font-semibold;
-                                            color: $black;
+                                    display: flex;
+                                    justify-content: space-between;
+                                    background-color: #f1f1f1;
+                                    min-width: 942px;
+                                    .left-title {
+                                        @include font-semibold;
+                                        font-size: 16px;
+                                    }
+                                    .left-list {
+                                        width: 100%;
+                                        height: 100%;
+                                        .left-link {
+                                            display: flex;
+                                            justify-content: space-between;
+                                            .left-block {
+                                                flex-direction: column;
+                                                flex-wrap: wrap;
+                                                .left-item {
+                                                    margin: 16px 0 0 0;
+                                                    a {
+                                                        color: $black;
+                                                        font-size: 16px;
+                                                        @include font-light;
+                                                    }
+                                                }
+                                            }
+                                            .left-img {
+                                                margin: -19px 0 0 0;
+                                            }
                                         }
                                     }
                                 }
@@ -135,7 +187,7 @@
                     span {
                         margin: 0 0 0 48px;
                         font-size: 15px;
-                        font-weight: 600;
+                        @include font-semibold;
                         cursor: pointer;
                         &:first-child {
                             margin: 0;
