--- a/www/assets/styles/main.css
+++ b/www/assets/styles/main.css
@@ -2821,40 +2821,92 @@ margin: 0 10px;
 .header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu {
   display: flex;
   position: absolute;
-  width: 1264px;
-  height: 377px;
-  top: 65px;
+  justify-content: space-between;
+  top: 45px;
+  left: -35px;
+  border-radius: 0px 0px 8px 8px;
+  border: 1px solid #D3D3D3;
 }
 .header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-right {
   padding: 25px 32px 32px;
+  min-width: 322px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-right .right-title {
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-right .right-list .right-title {
   font-size: 24px;
   font-family: "SourceSansPro-Bold", arial, helvetica, sans-serif;
   font-weight: normal;
 }
-.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-right .right-block {
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-right .right-list .right-block {
   flex-direction: column;
 }
-.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-right .right-block .right-item {
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-right .right-list .right-block .right-item {
   font-size: 16px;
+  margin: 28px 0 0;
+}
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-right .right-list .right-block .right-item.active {
+  background: #F1F1F1;
+  border-radius: 24px;
+  padding: 10px 18px;
+  margin: 16px 0 0;
+  text-align: center;
+}
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-right .right-list .right-block .right-item.active::before {
+  content: "";
+}
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-right .right-list .right-block .right-item a {
+  color: #000000;
+  font-family: "SourceSansPro-SemiBold", arial, helvetica, sans-serif;
+  font-weight: normal;
+}
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-right .btn-item {
+  background: #EEEEEE;
+  border-radius: 23px;
+  padding: 8px 16px;
+  font-size: 14px;
   font-family: "SourceSansPro-SemiBold", arial, helvetica, sans-serif;
   font-weight: normal;
   color: #000000;
-  margin: 28px 0 0;
+  max-width: 127px;
+  text-align: center;
 }
 .header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-left {
   padding: 24px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #f1f1f1;
+  min-width: 942px;
 }
-.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-left .left-block {
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-left .left-title {
+  font-family: "SourceSansPro-SemiBold", arial, helvetica, sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+}
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-left .left-list {
+  width: 100%;
+  height: 100%;
+}
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-left .left-list .left-link {
+  display: flex;
+  justify-content: space-between;
+}
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-left .left-list .left-link .left-block {
   flex-direction: column;
   flex-wrap: wrap;
 }
-.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-left .left-block .left-item {
-  font-size: 16px;
-  font-family: "SourceSansPro-SemiBold", arial, helvetica, sans-serif;
-  font-weight: normal;
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-left .left-list .left-link .left-block .left-item {
+  margin: 16px 0 0 0;
+}
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-left .left-list .left-link .left-block .left-item a {
   color: #000000;
+  font-size: 16px;
+  font-family: "SourceSansPro-Light", arial, helvetica, sans-serif;
+  font-weight: normal;
+}
+.header-root .header-wrapper .low-container .low-block .category-item ul li .open-menu .menu-left .left-list .left-link .left-img {
+  margin: -19px 0 0 0;
 }
 .header-root .header-wrapper .low-container .low-block .category-item ul li:hover .open-menu {
   display: flex;
@@ -2862,7 +2914,8 @@ margin: 0 10px;
 .header-root .header-wrapper .low-container .low-block .right-item span {
   margin: 0 0 0 48px;
   font-size: 15px;
-  font-weight: 600;
+  font-family: "SourceSansPro-SemiBold", arial, helvetica, sans-serif;
+  font-weight: normal;
   cursor: pointer;
 }
 .header-root .header-wrapper .low-container .low-block .right-item span:first-child {
