--- a/www/assets/styles/layout/_header.scss
+++ b/www/assets/styles/layout/_header.scss
@@ -89,7 +89,7 @@
                                 }
                             }
                             .open-menu {
-                                display: flex;
+                                display: none;
                                 position: absolute;
                                 justify-content: space-between;
                                 top: 45px;
@@ -128,7 +128,17 @@
                                                         border-bottom: 2px solid $black;
                                                         transform: rotate(-45deg);
                                                         position: absolute;
-                                                        top: 15px;
+                                                        top: 14px;
+                                                    }
+                                                    &::after {
+                                                        content: '';
+                                                        display: block;
+                                                        width: 20px;
+                                                        height: 2px;
+                                                        position: absolute;
+                                                        background-color: $black;
+                                                        top: 18px;
+                                                        left: 7px;
                                                     }
                                                 }
                                                 a {
